# pnflow

./: .gitignore  CMakeLists.txt  README.md  build.sh
docker/: build_all.sh  build_docker_images.sh  run_linux.sh  run_windows.sh
docker/linux/: Dockerfile
docker/ubuntu18/: Dockerfile
docker/windows/: Dockerfile
pkgs/: CMakeLists.txt
python/: setup.py
python/pnflow/: __init__.py  pnflow.py
src/: CMakeLists.txt
src/include/: InputFile.h  globals.h  vector_to_file.h
src/pnm/: CMakeLists.txt
src/pnm/pnflow/: CMakeLists.txt  CommonData.h  FlowData.cpp  FlowData.h  FlowDomain.cpp  FlowDomain.h  FlowDomain_drain.cpp  FlowDomain_imbibe.cpp  InOutCNM.cpp  Makefile  NetworkTransform.cpp  Random.cpp  Random.h  elem_Model.cpp  elem_Model.h  hypreSolver.cpp  hypreSolver.h  inputData.cpp  inputData.h  pnflow.cpp  pnflow.h
src/pnm/pnflow/input/: input_manager.cpp  input_manager.h  input_parser.cpp  input_parser.h
src/pnm/pnflow/io/: vifstream.cpp  vifstream.h  virtual_files_manager.cpp  virtual_files_manager.h  vofstream.cpp  vofstream.h
src/pnm/pnflow/polygon/: cornerApex.cpp  cornerApex.h  polygon.cpp  polygonImb.cpp  polygon_calcR.cpp  setGVoidProps.h
src/pnm/pnflow/psPrc/: netStatistics.cpp  netStatistics.h  results3D.h  vtuWriter.cpp
teste/: compile.sh  run.sh  test.c  test.cpp
teste/c/: clean.sh  compile.sh  compile_linux.sh  run.sh  run_linux.sh  run_windows.sh  test.c  test.cpp
teste/c/test_data/: input.txt
teste/c/test_data_eight_pores/: input.txt
teste/python/: test.py
